Revision history for Devel-REPL

1.003016 - 2013-03-26
  - make all plugins load again by using native traits (thanks, Zaki Mughal!)
    (RT#84011)

1.003015 - 2013-03-01
  - fix "Attempt to use reference as lvalue in substr" warning on perl 5.16
    (thanks, ilmari!)
  - plugins that are used by the default profile now default to being
    installed, fixing RT#83669 and RT#83677

1.003014 - 2012-10-31
  - now using native Moose attribute traits, instead of the deprecated
    MooseX::AttributeHelper (thanks, Justin Hunter!)
  - now using namespace::autoclean rather than namespace::clean (thanks, Karen
    Etheridge!)

1.003013
  - Make Sys::SigAction optional dependency for Win32 systems
  - Apply some plugin related patchs from Caleb Cushing
1.003012
  - Remove some old code to avoid a future Moose warning
1.003011
  - History plugin now works for Term::ReadLine::Perl
  - Add ReadLine file completion if no other matches, fixes rt.cpan#58351
  - Add a bit more description of Turtle plugin to its POD
  - Fix rt.cpan#43151 where _-> completion had error
  - Add some missing functionality to t/load_core.t test coverage
  - Added docs on quoting and history expansion addressing rt.cpan#48459
1.3.10
  - Add exit_repl attribute as a non-signal related way to indicate the REPL should stop running.
1.3.9_02
  - resolve rt.cpan#45879 by implementing Term::ReadLine::Perl support for ReadLineHistory
  - resolve rt.cpan#55491 by skipping Interrupt test for win32
1.3.9_01
  - Completion works with Term::ReadLine::Perl, which works in win32 etc
1.3.9
  - Fix scary Moose 0.98 box, adding a check for ->isa('Devel::REPL') in Meta/Plugin.pm
1.3.8
  - Add doc to a bunch of plugins
  - Add DDC plugin (like DDS but Data::Dumper::Concise)
  - resolve rt.cpan#44231 SIGINT does not quit the REPL just kills the line being edited
1.3.7
  - resolve rt.cpan#44919 fix deprecated use of compute_all_applicable_methods
1.3.6
  - had to cut a new release, something went wrong with use of M::I